[workspace]
members = [
  "geopath",
  "itm",
  "nasadem",
  "propah",
  "terrain",
]
resolver = "2"

[workspace.dependencies]
anyhow            = "1"
approx            = "0.5.1"
byteorder         = "1.4.3"
camino            = "1"
clap              = { version = "4.4.2", features = ["derive"] }
criterion         = { version = "0.5", features = ["html_reports"] }
cxx               = "1"
cxx-build         = "1"
dashmap           = "5.5.3"
env_logger        = "0.10"
geo               = "0.26.0"
image             = "0"
itertools         = "0.14"
log               = "0.4.20"
memmap2           = "0.7.1"
num-traits        = "0.2"
rfprop            = { git = "https://github.com/JayKickliter/Signal-Server", branch = "master" }
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
textplots         = "0.8.4"
thiserror         = "1.0.48"
tikv-jemallocator = "0.5"

# We want meaninful stack traces when profiling/debugging
# benches/tests.
[profile.release]
debug = true
